--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "gourav saini",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.13.0",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
